<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefc"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="252dp"
        android:layout_marginLeft="224dp"
        android:layout_marginBottom="536dp"
        android:src="@drawable/blob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:layout_width="423dp"
        android:layout_height="337dp"
        android:layout_marginRight="172dp"
        android:layout_marginBottom="238dp"
        android:src="@drawable/blob__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="160dp"
        android:src="@drawable/blob__5_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/login"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">

        <TextView
            android:id="@+id/singUpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:hint="@string/username"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/passwordRepeat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/green" />
    </LinearLayout>

    <ImageView
        android:layout_width="415dp"
        android:layout_height="379dp"
        android:layout_marginTop="328dp"
        android:src="@drawable/signup_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signUp" />
</androidx.constraintlayout.widget.ConstraintLayout>